--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Raleway:wght@800&display=swap');
+
+.dancing_text{
+    font-family: 'Dancing Script', 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+}
